# fs_examine

./: .gitignore  Cargo.toml  README.md  fill_disk.py  rustfmt.toml
src/: lib.rs
src/headers/: bitfields.rs  boot_sector.rs  constants.rs  disx86.rs  exfat.rs  gpt.rs  hash.rs  mbr.rs  mod.rs  printer.rs  reader.rs  summer.rs
src/headers/exfat/: boot_sector.rs  extended_boot_sector.rs  mod.rs  sector_map.rs
src/headers/ext4/: README.md  block_group.rs  dirent.rs  extant.rs  extattrs.rs  extent.rs  hash.rs  hashdir.rs  inode.rs  mod.rs  reader.rs  superblock.rs
src/headers/ext4/reader/: bg.rs  ino.rs  mod.rs  part.rs
src/headers/fs/: disk.rs  mod.rs
src/headers/gpt/: mod.rs  partitions.rs  uuids.rs
src/headers/xfs/: mod.rs  ondiskhdr.rs
tests/: .gitattributes  test_validate.rs
