[package]
name = "xfat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

byteorder = "1.0"
bincode = "1.3.3"
serde = {version="1.0", features = ["derive"]}
serde-big-array = "0.4.1"
pretty-hex = "0.1"

[dependencies.iced-x86]
version = "1.17.0"
default-features = false
features = ["std", "decoder", "nasm"]

