[package]
name = "xfat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bswap = "1.0"
byteorder = "1.0"
bincode = "1.3.3"
serde = {version="1.0", features = ["derive"]}
serde-big-array = "0.4.1"
num-traits = "0.2"
num-derive = "0.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
compiled-uuid = "0.1"
lazy_static = "1.4.0"
chrono = "0.4.19"
nameof = "1.2.2"
colored = "2"
crc = "2.1.0"
md4 = "0.10.1"

[dependencies.iced-x86]
version = "1.17.0"
default-features = false
features = ["std", "decoder", "nasm"]

